--- a/MovieTinder/tsconfig.json
+++ b/MovieTinder/tsconfig.json
@@ -1,13 +1,19 @@
 {
+  "compileOnSave": true,
   "compilerOptions": {
-    "lib": [ "DOM", "ES2015" ],
-    "target": "es5",
-    "noEmitOnError": true,
-    "strict": false,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "outDir": "wwwroot/js"
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "noImplicitAny": true,
+    "noImplicitReturns": true,
+    "removeComments": true,
+    "outDir": "wwwroot/js/",
+    "target": "ES6"
   },
-  "include": [ "Content/scripts/**/*" ],
-  "compileOnSave": true
+  "exclude": [
+    "node_modules",
+    "wwwroot"
+  ],
+  "include": [
+    "Content/scripts/*.ts"
+  ]
 }
